# nelly-projects

./: .gitignore  README.md
admin_automator/: README.md  SKILL.md  pyproject.toml
admin_automator/references/: config.json  ledger_schema.md
admin_automator/scripts/: admin_scan.py  reconcile_csv.py
admin_automator/src/admin_automator/: cli.py  config.py  drive_client.py  extract.py  gmail_client.py  google_auth.py  ocr.py  pdf_render.py  runner.py  sheets_client.py
admin_automator/tests/: test_config.py  test_extract.py
